welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: not found: value Direction
  setDirection(dir:Direction.EST)
                   ^DwarfCode:4: error: not found: value dir
  setDirection(dir:Direction.EST)
               ^